; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest6.c_testSaveDb.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/lsm1/lsm-test/extr_lsmtest6.c_testSaveDb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"%s-%s\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"%s-save\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"%s-%s-save\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @testSaveDb(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = call i8* (i8*, i8*, ...) @testMallocPrintf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* %8, i8* %9)
  store i8* %10, i8** %5, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = call i8* (i8*, i8*, ...) @testMallocPrintf(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* %11)
  store i8* %12, i8** %6, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = call i8* (i8*, i8*, ...) @testMallocPrintf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0), i8* %13, i8* %14)
  store i8* %15, i8** %7, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = call i32 @unlink(i8* %16)
  %18 = load i8*, i8** %7, align 8
  %19 = call i32 @unlink(i8* %18)
  %20 = load i8*, i8** %3, align 8
  %21 = load i8*, i8** %6, align 8
  %22 = call i32 @copy_file(i8* %20, i8* %21, i32 1)
  %23 = load i8*, i8** %5, align 8
  %24 = load i8*, i8** %7, align 8
  %25 = call i32 @copy_file(i8* %23, i8* %24, i32 0)
  %26 = load i8*, i8** %5, align 8
  %27 = call i32 @testFree(i8* %26)
  %28 = load i8*, i8** %6, align 8
  %29 = call i32 @testFree(i8* %28)
  %30 = load i8*, i8** %7, align 8
  %31 = call i32 @testFree(i8* %30)
  ret void
}

declare dso_local i8* @testMallocPrintf(i8*, i8*, ...) #1

declare dso_local i32 @unlink(i8*) #1

declare dso_local i32 @copy_file(i8*, i8*, i32) #1

declare dso_local i32 @testFree(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
